--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -854,7 +854,7 @@ alertmanager:
 ## Using default values from https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
 ##
 grafana:
-  enabled: false
+  enabled: true
   namespaceOverride: ""
 
   ## ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
@@ -3186,8 +3186,8 @@ prometheus:
 
     ## The remote_write spec configuration for Prometheus.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#remotewritespec
-    remoteWrite: []
-    # - url: http://remote1/push
+    remoteWrite: 
+     - url: https://maheshglm.grafana.net/push
     ## additionalRemoteWrite is appended to remoteWrite
     additionalRemoteWrite: []
 
