--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -884,7 +884,7 @@ grafana:
   ingress:
     ## If true, Grafana Ingress will be created
     ##
-    enabled: false
+    enabled: true
 
     ## IngressClassName for Grafana Ingress.
     ## Should be provided if Ingress is enable.
@@ -893,7 +893,10 @@ grafana:
 
     ## Annotations for Grafana Ingress
     ##
-    annotations: {}
+    annotations:
+      cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
+      kubernetes.io/ingress.class: nginx
+
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
 
@@ -906,7 +909,8 @@ grafana:
     ##
     # hosts:
     #   - grafana.domain.com
-    hosts: []
+    hosts:
+      - grafana.internal.letsdevops.link
 
     ## Path for grafana ingress
     path: /
@@ -914,10 +918,10 @@ grafana:
     ## TLS configuration for grafana Ingress
     ## Secret must be manually created in the namespace
     ##
-    tls: []
-    # - secretName: grafana-general-tls
-    #   hosts:
-    #   - grafana.example.com
+    tls: 
+    - secretName: grafana-internal-letsdevops-tls
+      hosts:
+      -  grafana.internal.letsdevops.link
 
   sidecar:
     dashboards:
