--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -884,7 +884,7 @@ grafana:
   ingress:
     ## If true, Grafana Ingress will be created
     ##
-    enabled: true
+    enabled: false
 
     ## IngressClassName for Grafana Ingress.
     ## Should be provided if Ingress is enable.
@@ -896,6 +896,7 @@ grafana:
     annotations:
       cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
       kubernetes.io/ingress.class: nginx
+      
 
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
