--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -887,9 +887,9 @@ grafana:
     ## If true, Grafana PSPs will be created
     ##
     pspEnabled: false
-  # env:
-  #   GF_SERVER_ROOT_URL: https://monitoring.internal.letsdevops.link/grafana
-  #   GF_SERVER_SERVE_FROM_SUB_PATH: 'true'
+  env:
+    GF_SERVER_ROOT_URL: https://monitoring.internal.letsdevops.link/grafana
+    GF_SERVER_SERVE_FROM_SUB_PATH: 'true'
   ingress:
     ## If true, Grafana Ingress will be created
     ##
@@ -2965,7 +2965,7 @@ prometheus:
 
     ## External URL at which Prometheus will be reachable.
     ##
-    externalUrl: ""
+    externalUrl: "https://monitoring.internal.letsdevops.link/prometheus"
 
     ## Define which Nodes the Pods are scheduled on.
     ## ref: https://kubernetes.io/docs/user-guide/node-selection/
@@ -3156,7 +3156,7 @@ prometheus:
     ## Prefix used to register routes, overriding externalUrl route.
     ## Useful for proxies that rewrite URLs.
     ##
-    routePrefix: /
+    routePrefix: "/prometheus"
 
     ## Standard object's metadata. More info: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#metadata
     ## Metadata Labels and Annotations gets propagated to the prometheus pods.
