--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -906,6 +906,8 @@ grafana:
       cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
       nginx.ingress.kubernetes.io/rewrite-target: /$2
       nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
@@ -2701,6 +2703,8 @@ prometheus:
       cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
       nginx.ingress.kubernetes.io/rewrite-target: /$2
       nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     labels: {}
 
     ## Redirect ingress to an additional defined port on the service
