--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -888,7 +888,7 @@ grafana:
     ##
     pspEnabled: false
   env:
-    GF_SERVER_ROOT_URL: https://monitoring.internal.letsdevops.link/grafana
+    GF_SERVER_ROOT_URL: 'https://monitoring.internal.letsdevops.link/grafana'
     GF_SERVER_SERVE_FROM_SUB_PATH: 'true'
   ingress:
     ## If true, Grafana Ingress will be created
@@ -905,9 +905,6 @@ grafana:
     annotations:
       cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
       nginx.ingress.kubernetes.io/rewrite-target: /$2
-      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-      # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
@@ -924,7 +921,7 @@ grafana:
     hosts: ['monitoring.internal.letsdevops.link']
 
     ## Path for grafana ingress
-    path: "/grafana(/|$)(.*)"
+    path: '/grafana(/|$)(.*)'
 
     ## TLS configuration for grafana Ingress
     ## Secret must be manually created in the namespace
@@ -2701,10 +2698,6 @@ prometheus:
 
     annotations:
       cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
-      # nginx.ingress.kubernetes.io/rewrite-target: /$2
-      # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-      # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-      # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     labels: {}
 
     ## Redirect ingress to an additional defined port on the service
@@ -3206,8 +3199,7 @@ prometheus:
 
     ## The remote_write spec configuration for Prometheus.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#remotewritespec
-    remoteWrite: 
-     - url: https://maheshglm.grafana.net/push
+    remoteWrite: []
     ## additionalRemoteWrite is appended to remoteWrite
     additionalRemoteWrite: []
 
