--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -905,6 +905,7 @@ grafana:
     annotations:
       cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
       nginx.ingress.kubernetes.io/rewrite-target: /$2
+      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
 
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
