--- a/values-kind.yaml
+++ b/values-kind.yaml
@@ -905,8 +905,6 @@ grafana:
     
     annotations:
       cert-manager.io/cluster-issuer: letsdevops-custom-ca-clusterissuer
-      nginx.ingress.kubernetes.io/rewrite-target: /$2
-      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
 
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
@@ -920,18 +918,18 @@ grafana:
     ##
     # hosts:
     #   - grafana.domain.com
-    hosts: ['monitoring.internal.letsdevops.link']
+    hosts: ['grafana.internal.letsdevops.link']
 
     ## Path for grafana ingress
-    path: "/grafana(/|$)(.*)"
+    path: /
 
     ## TLS configuration for grafana Ingress
     ## Secret must be manually created in the namespace
     ##
     tls: 
-    - secretName: monitoring-internal-letsdevops-tls
+    - secretName: grafana-internal-letsdevops-tls
       hosts:
-      -  monitoring.internal.letsdevops.link
+      -  grafana.internal.letsdevops.link
 
   sidecar:
     dashboards:
